# jsonipy

./: .gitignore  README.md  pyproject.toml
jsonipy/: main.py
